# rust-first-contact

./: Cargo.toml
src/: main.rs  main2.rs
