[package]
name = "rust-first-contact"
version = "0.1.0"
authors = ["Miquel Vallespir <miguel.vallespir@omniaccess.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.11.2", features = ["blocking"]}
##json = "0.12.4"
#serde_json = "1.0.64"
rust_model_parser = { version = "0.0.0", path = "../rust_model_parser" }
